<?xml version="1.0" encoding="utf-8"?>
<!--
  Fahrgemeinschaft / Ridesharing App
  Copyright (c) 2013 by it's authors.
  Some rights reserved. See LICENSE.. 
-->

<resources>

    <string name="app_name" translatable="false">Fahrgemeinschaft</string>

    <string name="from">from</string>
    <string name="via">via</string>
    <string name="to">to</string>
    <string name="when">when</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="today">today</string>
    <string name="now">now</string>
    <string name="ready">Ready</string>
    <string name="tomorrow">tomorrow</string>
    <string name="after_tomorrow">day after tomorrow</string>
    <string name="publish">publish</string>
    <string name="search">search</string>
    <string name="offer">offer</string>
    <string name="incomplete">Ride incomplete, please enter Origin and Destination</string>
    <string name="searching">searching for</string>
    <string name="nothing">nothing found for</string>
    <string name="search_continue">continue searching</string>
    <string name="results">Results</string>
    <string name="details">Details</string>
    <string name="mydetails">My Details</string>
    <string name="myrides">My Rides</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="donate">Donate</string>
    <string name="about">About</string>
    <string name="decrease_seats">-</string>
    <string name="increase_seats">+</string>
    <string name="edit">Edit</string>
    <string name="deactivate">Deactivate</string>
    <string name="activate">Activate</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="duplicate_retour">Duplicate Retour</string>
    <string name="show_website">Show Website</string>
    <string name="share">Share</string>
    <string name="stored">Ride stored</string>
    <string name="past_ride">
        Ride is in the past. Please choose a new date:
    </string>

    <string name="mode_car">Car</string>
    <string name="mode_rail">Train</string>
    <string name="price">Price</string>
    <string name="comment">Comments for your Ride</string>

    <string name="auth_success">Successfully logged in</string>
    <string name="auth_error">wrong Username or Password</string>
    <string name="auth_no_network">no Internet connection</string>
    <string name="username">eMail</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="logout">logout</string>
    <string name="register">register</string>
    <string name="login_required">Please log in</string>
    <string name="why_login">to publish rides on fahrgemeinschaft.de</string>
    <string name="request_contact">request contact</string>
    <string name="why_request">
        Contact info is protected by user
        and can only be requested on the website
    </string>
        <string name="error">Error!</string>
    <string name="request_app_upgrade">Try upgrade to newer version of the app.</string>

    <string name="contact">Contact</string>
    <string name="seats">Seats</string>
    <string name="seats_full">no more seats</string>
    <string name="seats_1">one seat</string>
    <string name="seats_2">two seats</string>
    <string name="seats_3">three seats</string>
    <string name="seats_many">many seats</string>

    <string name="email_hint">eMail</string>
    <string name="landline_hint">Landline</string>
    <string name="mobile_hint">Mobile</string>
    <string name="plate_hint">Numberplate</string>
    <string name="name_hint">Surname</string>
    <string name="reccurence">recurring ride: every week at</string>
    <string name="reccurence_date">recurring ride</string>
    <string name="reoccurring">reoccurring</string>
    <string name="member_since">Member since %1$s</string>
    <string name="last_login">Last login %1$s</string>
    <string name="no_comment">no Comment available</string>

    <string name="visibility">Visibility</string>
    <string-array name="visibility">
        <item name="anybody">publicly visible</item>
        <item name="members">visible for members</item>
        <item name="request">visible upon request</item>
        <item name="nobody">not visible</item>
    </string-array>

    <string name="search_settings">Search Settings</string>
    <string name="radius_from">Nearby radius origin</string>
    <string name="radius_from_desc">Search rides nearby \'from\' place</string>
    <string name="radius_to">Nearby radius destination</string>
    <string name="radius_to_desc">Search rides nearby \'to\' place</string>
    <string name="remember_password">Remember Password</string>
    <string name="remember_password_desc">stored on device</string>
    <string name="refresh_title">Refresh after</string>
    <string name="refresh_description">
        Expire search results after %1$s
    </string>
    <string-array name="refresh_entries" translatable="false">
        <item name="refresh_1min">1min</item>
        <item name="refresh_3min">3min</item>
        <item name="refresh_5min">5min</item>
        <item name="refresh_10min">10min</item>
        <item name="refresh_30min">30min</item>
        <item name="refresh_1h">1h</item>
        <item name="refresh_2h">2h</item>
        <item name="refresh_3h">3h</item>
        <item name="refresh_12h">12h</item>
        <item name="refresh_24h">24h</item>
    </string-array>
    <string-array name="refresh_values" translatable="false">
        <item name="refresh_1min">60000</item>
        <item name="refresh_3min">180000</item>
        <item name="refresh_5min">300000</item>
        <item name="refresh_10min">600000</item>
        <item name="refresh_30min">1800000</item>
        <item name="refresh_1h">3600000</item>
        <item name="refresh_2h">7200000</item>
        <item name="refresh_3h">10800000</item>
        <item name="refresh_12h">43200000</item>
        <item name="refresh_24h">86400000</item>
    </string-array>
    <string name="create_contact">Create Contact</string>
    <string name="create_contact_desc">
        Save to Phonebook as contact option
    </string>
    <string name="verbose" translatable="false">Debug Toasts</string>
    <string name="verbose_desc">
        Show what background service is doing
    </string>
</resources>