<PreferenceScreen
    xmlns:robobunny="http://robobunny.com"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/search_settings">
        <com.robobunny.SeekBarPreference
            android:key="radius_from"
            android:title="@string/radius_from"
            android:summary="@string/radius_from_desc"
            robobunny:min="1"
            android:max="75"
            robobunny:unitsLeft="ca."
            robobunny:unitsRight="km"
            android:defaultValue="15" />
        <com.robobunny.SeekBarPreference
            android:key="radius_to"
            android:title="@string/radius_to"
            android:summary="@string/radius_to_desc"
            robobunny:min="1"
            android:max="75"
            robobunny:unitsLeft="ca."
            robobunny:unitsRight="km"
            android:defaultValue="25" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Advanced" >
        <ListPreference 
            android:key="refresh"
            android:title="@string/refresh_title"
            android:entries="@array/refresh_entries"
            android:entryValues="@array/refresh_values"
            android:summary="@string/refresh_description"
            android:defaultValue="600000" />

       <Preference
            android:key="feedback"
            android:title="@string/feedback" />

       <Preference
            android:key="donate"
            android:title="@string/donate" />

        <Preference
            android:key="special"
            android:title="Special Expert" />

       <Preference
            android:key="about"
            android:title="@string/about" />
    </PreferenceCategory>
</PreferenceScreen>