<PreferenceScreen xmlns:robobunny="http://robobunny.com"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="Special Expert Settings" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="remember_password"
            android:summary="@string/remember_password_desc"
            android:title="@string/remember_password" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="create_contact"
            android:summary="@string/create_contact_desc"
            android:title="@string/create_contact" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="verbose"
            android:summary="@string/verbose_desc"
            android:title="@string/verbose" />

        <Preference
            android:key="about"
            android:title="@string/about" />
    </PreferenceCategory>

</PreferenceScreen>