<?xml version="1.0" encoding="utf-8"?>
<!--
  Fahrgemeinschaft / Ridesharing App
  Copyright (c) 2013 by it's authors.
  Some rights reserved. See LICENSE.. 
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <de.fahrgemeinschaft.util.PrivacyImageButton
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xlarge"
        android:hint="@string/name_hint"
        android:inputType="textCapWords"
        android:src="@drawable/icn_view_user" />

    <de.fahrgemeinschaft.util.PrivacyImageButton
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xlarge"
        android:layout_marginTop="@dimen/small"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:src="@drawable/icn_contact_email" />

    <de.fahrgemeinschaft.util.PrivacyImageButton
        android:id="@+id/plate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xlarge"
        android:layout_marginTop="@dimen/small"
        android:hint="@string/plate_hint"
        android:inputType="textCapCharacters"
        android:src="@drawable/icn_contact_kfz" />

    <de.fahrgemeinschaft.util.PrivacyImageButton
        android:id="@+id/landline"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xlarge"
        android:layout_marginTop="@dimen/small"
        android:hint="@string/landline_hint"
        android:inputType="phone"
        android:src="@drawable/icn_contact_phone" />

    <de.fahrgemeinschaft.util.PrivacyImageButton
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xlarge"
        android:layout_marginTop="@dimen/small"
        android:hint="@string/mobile_hint"
        android:inputType="phone"
        android:src="@drawable/icn_contact_handy" />

</LinearLayout>