<?xml version="1.0" encoding="utf-8"?>
<!--
  Fahrgemeinschaft / Ridesharing App
  Copyright (c) 2013 by it's authors.
  Some rights reserved. See LICENSE.. 
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <de.fahrgemeinschaft.util.PlaceImageButton
        android:id="@+id/btn_autocomplete_to"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:src="@drawable/icn_dropdown"
        android:text="@string/to" />

    <de.fahrgemeinschaft.util.PlaceImageButton
        android:id="@+id/btn_autocomplete_from"
        android:layout_width="match_parent"
        android:layout_above="@id/btn_autocomplete_to"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/icn_dropdown"
        android:text="@string/from" />

    <de.fahrgemeinschaft.util.DateImageButton
        android:id="@+id/btn_pick_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/place_height"
        android:layout_below="@id/btn_autocomplete_to"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/icn_datepicker"
        android:text="@string/date" />

    <ImageView
        android:id="@+id/logo_fahrgemeinschaft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_autocomplete_from"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_fahrgemeinschaft"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/btn_mitfahren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="@dimen/medium"
            android:background="@drawable/btn_dark_green"
            android:paddingTop="0sp"
            android:drawableTop="@drawable/btn_suchen"
            android:drawablePadding="-35sp"
            android:textColor="@color/light_green"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/search"
            android:focusable="true"
            android:contentDescription="@string/search" />

        <Button
            android:id="@+id/btn_selberfahren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="@dimen/medium"
            android:background="@drawable/btn_medium_green"
            android:paddingTop="0sp"
            android:drawableTop="@drawable/btn_anbieten"
            android:drawablePadding="-35sp"
            android:textColor="@color/light_green"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/offer"
            android:focusable="true"
            android:contentDescription="@string/offer" />

    </LinearLayout>
</RelativeLayout>