<?xml version="1.0" encoding="utf-8"?>
<!--
  Fahrgemeinschaft / Ridesharing App
  Copyright (c) 2013 by it's authors.
  Some rights reserved. See LICENSE.. 
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout 
        android:layout_marginTop="@dimen/larger"
        android:layout_height="@dimen/large_icn"
        android:layout_width="match_parent" >

        <View 
            android:id="@+id/white_bg"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/opacity_white" />

        <de.fahrgemeinschaft.util.DateImageButton
            android:id="@+id/date"
            android:layout_height="@dimen/large_icn"
            android:layout_width="match_parent"
            android:src="@drawable/icn_datepicker"
            android:text="@string/date" />

    </RelativeLayout>

    <de.fahrgemeinschaft.util.DateImageButton
        android:id="@+id/time"
        android:layout_height="@dimen/large_icn"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/medium"
        android:src="@drawable/icn_timepicker"
        android:text="@string/time" />

    <TextView
        android:id="@+id/recurrence_text"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/larger"
        android:background="@color/medium_green"
        android:gravity="bottom"
        android:height="12dp"
        android:paddingLeft="@dimen/small"
        android:paddingRight="@dimen/small"
        android:text="@string/reccurence"
        android:textColor="#FFFFFF" />

    <de.fahrgemeinschaft.util.ReoccuringWeekDaysView
        android:id="@+id/reoccur"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xlarge"
        android:orientation="horizontal" />

    <de.fahrgemeinschaft.util.EditTextImageButton
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/larger"
        android:src="@drawable/icn_pricepicker"
        android:inputType="number"
        android:hint="@string/price" />

</LinearLayout>