<?xml version="1.0" encoding="utf-8"?>
<!--
  Fahrgemeinschaft / Ridesharing App
  Copyright (c) 2013 by it's authors.
  Some rights reserved. See LICENSE.. 
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/mode"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="@dimen/medium"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <FrameLayout
            android:id="@+id/mode_car"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:focusable="true"
            android:background="@drawable/btn_day" >

            <ImageView
                android:id="@+id/mode_car_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icn_goby_car"
                android:contentDescription="@string/mode_car"/>

            <TextView
                android:id="@+id/mode_car_text"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="70dp"
                android:text="@string/mode_car"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/mode_rail"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:focusable="true"
            android:background="@drawable/btn_day" >

            <ImageView
                android:id="@+id/mode_rail_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icn_goby_train"
                android:contentDescription="@string/mode_rail" />

            <TextView
                android:id="@+id/mode_rail_text"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="70dp"
                android:text="@string/mode_rail"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seats"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/seats_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_marginRight="@dimen/small"
            android:layout_weight="1"
            android:focusable="true"
            android:background="@drawable/btn_day"
            android:src="@drawable/icn_seats_full"
            android:contentDescription="@string/seats_full" />

        <ImageView
            android:id="@+id/seats_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_marginLeft="@dimen/small"
            android:layout_marginRight="@dimen/small"
            android:layout_weight="1"
            android:focusable="true"
            android:background="@drawable/btn_day"
            android:src="@drawable/icn_seats_1"
            android:contentDescription="@string/seats_1" />

        <ImageView
            android:id="@+id/seats_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_marginLeft="@dimen/small"
            android:layout_marginRight="@dimen/small"
            android:layout_weight="1"
            android:focusable="true"
            android:background="@drawable/btn_day"
            android:src="@drawable/icn_seats_2"
            android:contentDescription="@string/seats_2" />

        <ImageView
            android:id="@+id/seats_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_marginLeft="@dimen/small"
            android:layout_marginRight="@dimen/small"
            android:layout_weight="1"
            android:focusable="true"
            android:background="@drawable/btn_day"
            android:src="@drawable/icn_seats_3"
            android:contentDescription="@string/seats_3" />

        <ImageView
            android:id="@+id/seats_many"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_marginLeft="@dimen/small"
            android:layout_weight="1"
            android:focusable="true"
            android:background="@drawable/btn_day"
            android:src="@drawable/icn_seats_many"
            android:contentDescription="@string/seats_many" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/route"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/larger"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <de.fahrgemeinschaft.util.PlaceImageButton
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/medium"
            android:src="@drawable/icn_dropdown"
            android:text="@string/from" />

        <de.fahrgemeinschaft.util.PlaceImageButton
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:src="@drawable/icn_dropdown"
            android:text="@string/to" />
    </LinearLayout>

</LinearLayout>