<?xml version="1.0" encoding="utf-8"?>
<!--
  Fahrgemeinschaft / Ridesharing App
  Copyright (c) 2013 by it's authors.
  Some rights reserved. See LICENSE..
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/xlight_opacity_white" >

    <Button
        android:id="@+id/edit"
        android:layout_height="@dimen/xlarger"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:layout_marginBottom="@dimen/medium"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:drawableLeft="@drawable/icn_edit"
        android:drawablePadding="0sp"
        android:text="@string/edit"
        android:textColor="@color/darker_green"
        android:background="@drawable/btn_light_white"
        style="@style/place_pick_btn" />

    <ImageButton
        android:id="@+id/increase_seats"
        android:layout_height="@dimen/xlarger"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginBottom="@dimen/medium"
        android:src="@drawable/icn_seats_plus"
        android:background="@drawable/btn_dark_green"
        android:contentDescription="@string/increase_seats"
        style="@style/place_pick_btn" />

    <ImageButton
        android:id="@+id/decrease_seats"
        android:layout_height="@dimen/xlarger"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:layout_marginBottom="@dimen/medium"
        android:src="@drawable/icn_seats_minus"
        android:background="@drawable/btn_dark_green"
        android:contentDescription="@string/decrease_seats"
        style="@style/place_pick_btn" />

</LinearLayout>